--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 REACT_APP_API_URL=https://hannusapitest.azurewebsites.net/
 REACT_APP_Environment=production
-
+REACT_APP_Redirect_URL=https://readingdiary.azurewebsites.net/
