--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,5 @@
 REACT_APP_API_URL=https://localhost:7299/
 REACT_APP_Environment=development
 REACT_APP_Redirect_URL=http://localhost:3000/
+REACT_APP_AUTH_DOMAIN=dev-ydcxmmfaiie0fgyg.us.auth0.com
+REACT_APP_AUTH_ID=BPWuMQ7UNrisLwN0XSjO7fDrmnXEfzYc
