--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,5 @@
 REACT_APP_API_URL=https://hannusapitest.azurewebsites.net/
 REACT_APP_Environment=production
 REACT_APP_Redirect_URL=https://readingdiary.azurewebsites.net/
+REACT_APP_AUTH_DOMAIN=reading-diary.eu.auth0.com
+REACT_APP_AUTH_ID=d06xTtnhdY5LiHqv8Y9T6C87VNNddCdj
